SLING-12882 Migrate Starter Content to sling api 3.0 and models api 2.0 (#12)